# HaluGuard

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DRY_RUN.md  GLOSSARY.md
haluguard/: __init__.py  baselines.py  chunker.py  data_pipeline.py  efl.py  evaluate.py  generate.py  hccs.py  pipeline.py  type_router.py
notebooks/: 01_data_pipeline.ipynb  02_train_hccs.ipynb  03_evaluation.ipynb  utils.py
tests/: test_baselines.py  test_data_pipeline.py  test_efl.py  test_generate.py
