[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haluguard"
version = "0.1.0"
description = "Execution-Grounded Contrastive Context Selection for Hallucination-Free Repository-Level Code Generation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "datasets>=2.0",
    "numpy>=1.24",
    "tqdm>=4.65",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["haluguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
